{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 22,
  "lineage": "4f18906d-91fc-3ede-553e-789120717a08",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:network-acl/acl-046176c69b24f65e8",
            "default_network_acl_id": "acl-046176c69b24f65e8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-046176c69b24f65e8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "792207812159",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-053e92fc7e209bb37",
              "subnet-0b651666950e1f32c",
              "subnet-0dca58555543eb88c",
              "subnet-0dd6c96228063a2b8"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-default",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-default",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077f21e5574e4d681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:route-table/rtb-0e6f73e5cd9757a91",
            "default_route_table_id": "rtb-0e6f73e5cd9757a91",
            "id": "rtb-0e6f73e5cd9757a91",
            "owner_id": "792207812159",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-default",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-default",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-077f21e5574e4d681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:security-group/sg-0958b5bc7ebc42cb2",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0958b5bc7ebc42cb2",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "792207812159",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-default",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-default",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077f21e5574e4d681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:internet-gateway/igw-0a42310731b96d8cf",
            "id": "igw-0a42310731b96d8cf",
            "owner_id": "792207812159",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077f21e5574e4d681"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "igw-0a42310731b96d8cf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a42310731b96d8cf",
            "id": "r-rtb-06547e4c185ca2ffe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-06547e4c185ca2ffe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-06547e4c185ca2ffe"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:route-table/rtb-013ec96188a581934",
            "id": "rtb-013ec96188a581934",
            "owner_id": "792207812159",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-private-ap-south-1a",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-private-ap-south-1a",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-077f21e5574e4d681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "rtb-013ec96188a581934",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:route-table/rtb-0932226a5c8070801",
            "id": "rtb-0932226a5c8070801",
            "owner_id": "792207812159",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-private-ap-south-1b",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-private-ap-south-1b",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-077f21e5574e4d681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "rtb-0932226a5c8070801",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:route-table/rtb-06547e4c185ca2ffe",
            "id": "rtb-06547e4c185ca2ffe",
            "owner_id": "792207812159",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a42310731b96d8cf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-public",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-public",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-077f21e5574e4d681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "rtb-06547e4c185ca2ffe",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017c708ad4f2ec7a9",
            "region": "ap-south-1",
            "route_table_id": "rtb-013ec96188a581934",
            "subnet_id": "subnet-0b651666950e1f32c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "rtbassoc-017c708ad4f2ec7a9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3ff27f0fa1c92ef",
            "region": "ap-south-1",
            "route_table_id": "rtb-0932226a5c8070801",
            "subnet_id": "subnet-053e92fc7e209bb37"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "rtbassoc-0a3ff27f0fa1c92ef",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042f81279c7023280",
            "region": "ap-south-1",
            "route_table_id": "rtb-06547e4c185ca2ffe",
            "subnet_id": "subnet-0dd6c96228063a2b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "rtbassoc-042f81279c7023280",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03948c396f696f4cb",
            "region": "ap-south-1",
            "route_table_id": "rtb-06547e4c185ca2ffe",
            "subnet_id": "subnet-0dca58555543eb88c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "rtbassoc-03948c396f696f4cb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:subnet/subnet-0b651666950e1f32c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b651666950e1f32c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792207812159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-private-ap-south-1a",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-private-ap-south-1a",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077f21e5574e4d681"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "subnet-0b651666950e1f32c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:subnet/subnet-053e92fc7e209bb37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053e92fc7e209bb37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792207812159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-private-ap-south-1b",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-private-ap-south-1b",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077f21e5574e4d681"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "subnet-053e92fc7e209bb37",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:subnet/subnet-0dd6c96228063a2b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd6c96228063a2b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792207812159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-public-ap-south-1a",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-public-ap-south-1a",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077f21e5574e4d681"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "subnet-0dd6c96228063a2b8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:subnet/subnet-0dca58555543eb88c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dca58555543eb88c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792207812159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-public-ap-south-1b",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc-public-ap-south-1b",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-077f21e5574e4d681"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "subnet-0dca58555543eb88c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:792207812159:vpc/vpc-077f21e5574e4d681",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-046176c69b24f65e8",
            "default_route_table_id": "rtb-0e6f73e5cd9757a91",
            "default_security_group_id": "sg-0958b5bc7ebc42cb2",
            "dhcp_options_id": "dopt-093ca3526e8671ebb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077f21e5574e4d681",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6f73e5cd9757a91",
            "owner_id": "792207812159",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "eks-observability-vpc",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-observability-vpc",
              "Project": "eks-observability-platform",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792207812159",
            "id": "vpc-077f21e5574e4d681",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}